Bug 411482 - Stroke Selection Custom Color Not Producing White Color
Summary: Stroke Selection Custom Color Not Producing White Color
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 4.2.5
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-09-01 05:31 UTC by KST
Modified: 2020-05-05 09:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description KST 2019-09-01 05:31:02 UTC
SUMMARY
Stroke Selection Color not producing White Color #ffffff

STEPS TO REPRODUCE
1. Make selection with Magic Wand Tool
2. Edit > Stroke Selection > Custom Color(Change to White) > OK

OBSERVED RESULT
-When using #ffffff Value it shows the previously used Stroke color. Not White Color.

EXPECTED RESULT
-To Show White Outline


ADDITIONAL INFORMATION

Krita

 Version: 4.2.0
 Languages: en_GB, en_US
 Hidpi: true

Qt

  Version (compiled): 5.12.2
  Version (loaded): 5.12.2

OS Information

  Build ABI: x86_64-little_endian-llp64
  Build CPU: x86_64
  CPU: x86_64
  Kernel Type: winnt
  Kernel Version: 10.0.17134
  Pretty Productname: Windows 10 (10.0)
  Product Type: windows
  Product Version: 10


Hardware Information

  GPU Acceleration: desktop
  Memory: 8124 Mb
  Number of Cores: 4
  Swap Location: C:/Users/gui/AppData/Local/Temp

31 May 2019 10:50:20 +0630: Closing.
OpenGL Info
 
  Vendor:  "NVIDIA Corporation" 
  Renderer:  "GeForce GT 740/PCIe/SSE2" 
  Version:  "4.6.0 NVIDIA 416.34" 
  Shading language:  "4.60 NVIDIA" 
  Requested format:  QSurfaceFormat(version 3.0, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples -1, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 0, colorSpace QSurfaceFormat::DefaultColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
  Current format:    QSurfaceFormat(version 4.6, options QFlags<QSurfaceFormat::FormatOption>(DeprecatedFunctions), depthBufferSize 24, redBufferSize 8, greenBufferSize 8, blueBufferSize 8, alphaBufferSize 8, stencilBufferSize 8, samples 0, swapBehavior QSurfaceFormat::DoubleBuffer, swapInterval 1, colorSpace QSurfaceFormat::sRGBColorSpace, profile  QSurfaceFormat::CompatibilityProfile) 
     Version: 4.6
     Supports deprecated functions true 
     is OpenGL ES: false 

QPA OpenGL Detection Info 
  supportsDesktopGL: true 
  supportsAngleD3D11: true 
  isQtPreferAngle: false
Comment 1 wolthera 2019-09-21 15:10:26 UTC
I cannot confirm this on master, however, I do agree the window might need a bit of usability polish, it's too easy to pick the wrong options right now.
Comment 2 wolthera 2019-09-21 15:14:54 UTC
HOWEVER, I am getting a safe assert(that's a pretty dangerous internal error) when using white:

SAFE ASSERT (krita): "_pen.color() == Qt::white" in file /home/wolthera/krita/src/libs/image/kis_painter.cc, line 1469
Comment 3 Halla Rempt 2020-05-05 08:41:45 UTC
That assert is bogus, I removed it. But I can confirm that if I select white, the selection is stroked with the previously selected color.
Comment 4 Halla Rempt 2020-05-05 09:47:36 UTC
Git commit 4f2fad4e6b4160b568ed4b3aeef6fd2909d19cd9 by Boudewijn Rempt.
Committed on 05/05/2020 at 09:47.
Pushed by rempt into branch 'master'.

Fix selecting colors in the stroke selection dialog

And clean up the code: comparing the translated strings in a
combobox with untranslated English strings to figure out what
option was chosen is, of course, a big no-no.
(cherry picked from commit 9c8454f3090013b03306f7281a9110ffe75c5f8a)

M  +93   -84   libs/ui/dialogs/kis_dlg_stroke_selection_properties.cpp
M  +22   -13   libs/ui/dialogs/kis_dlg_stroke_selection_properties.h

https://invent.kde.org/kde/krita/commit/4f2fad4e6b4160b568ed4b3aeef6fd2909d19cd9
Comment 5 Halla Rempt 2020-05-05 09:47:44 UTC
Git commit 9c8454f3090013b03306f7281a9110ffe75c5f8a by Boudewijn Rempt.
Committed on 05/05/2020 at 09:46.
Pushed by rempt into branch 'krita/4.3'.

Fix selecting colors in the stroke selection dialog

And clean up the code: comparing the translated strings in a
combobox with untranslated English strings to figure out what
option was chosen is, of course, a big no-no.

M  +93   -84   libs/ui/dialogs/kis_dlg_stroke_selection_properties.cpp
M  +22   -13   libs/ui/dialogs/kis_dlg_stroke_selection_properties.h

https://invent.kde.org/kde/krita/commit/9c8454f3090013b03306f7281a9110ffe75c5f8a