Fix selecting colors in the stroke selection dialog

And clean up the code: comparing the translated strings in a
combobox with untranslated English strings to figure out what
option was chosen is, of course, a big no-no.

BUG:411482